[gd_scene load_steps=7 format=3 uid="uid://7er1bcvsg3dt"]

[ext_resource type="Script" uid="uid://det4r32421t2j" path="res://stage4/stage4.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://puibd4woc2e" path="res://stage4/boss_1.tscn" id="2_8ta65"]
[ext_resource type="PackedScene" uid="uid://cuxdc162kncle" path="res://bird.tscn" id="2_bird"]
[ext_resource type="Texture2D" uid="uid://dgr7jftxgbvr4" path="res://assets/background/backgroundboss1.png" id="2_l5kmx"]
[ext_resource type="PackedScene" uid="uid://cw5n22sqwj0rc" path="res://stage4/hud_stage4.tscn" id="4_hud_stage4"]
[ext_resource type="PackedScene" path="res://bird_weapon.tscn" id="5_neo5x"]

[node name="Stage4" type="Node"]
script = ExtResource("1")

[node name="Backgroundboss1" type="Sprite2D" parent="."]
position = Vector2(360, 240)
texture = ExtResource("2_l5kmx")

[node name="Boss1" parent="." instance=ExtResource("2_8ta65")]
position = Vector2(638, 237)

[node name="HUDStage4" parent="." instance=ExtResource("4_hud_stage4")]

[node name="Bird" parent="." instance=ExtResource("2_bird")]
position = Vector2(68, 231)

[node name="BirdWeapon" parent="Bird" instance=ExtResource("5_neo5x")]

[connection signal="attack_complete" from="Boss1" to="." method="_on_boss_1_attack_complete"]
[connection signal="died" from="Boss1" to="." method="_on_boss_1_died"]
[connection signal="collide" from="Bird" to="." method="_on_bird_collide"]
